# Algorithm_Study

./: CMakeLists.txt
untitled/: 2480.cpp  AL002.cpp  B10871.cpp  CMakeLists.txt
untitled/0X03 배열/: 10808.cpp  1475.cpp  2577.cpp  3273.cpp
untitled/0X04/: 1158.cpp  1406.cpp  5397.cpp
untitled/0X05/: 1874.cpp  2493.cpp
untitled/0X06/: 18258.cpp  2164.cpp
untitled/0X07/: 1021.cpp  5430.cpp
untitled/0X08/: 10799.cpp  2504.cpp  3986.cpp
untitled/0X09/: 1926.cpp  hw1.c  hw2.c
untitled/0X10 BFS/: 10026.cpp  13549.cpp  13913.cpp  14442.cpp  1600.cpp  16933.cpp  1697.cpp  2146.cpp  2206.cpp  2468.cpp  2583.cpp  2667.cpp  4179.cpp  5014.cpp  6593.cpp  7562.cpp  7569.cpp  9466.cpp
untitled/0X11 재귀/: 1074.cpp  11729.cpp  1629.cpp  1780.cpp  1992.cpp  2447.cpp  2448.cpp  2630.cpp
untitled/0X12 백트래킹/: 1182.cpp  15649.cpp  15650.cpp  15651.cpp  15652.cpp  15654.cpp  15655.cpp  15656.cpp  15657.cpp  15664.cpp  15665.cpp  15666.cpp  1759.cpp  6603.cpp  9663.cpp
untitled/0X13 시뮬레이션/: 15683.cpp  18808.cpp
untitled/0X14 DP/: 1003.cpp  10844.cpp  1149.cpp  11659.cpp  11726.cpp  11727.cpp  12852.cpp  12865.cpp  1463.cpp  15486.cpp  1699.cpp  1912.cpp  1932.cpp  2193.cpp  2579.cpp  9084.cpp  9095.cpp  9251.cpp
untitled/0X15 그리디/: 1026.cpp  11047.cpp  11501.cpp  1541.cpp  1700.cpp  1744.cpp  1931.cpp  2170.cpp  2217.cpp  2457.cpp
untitled/0X16 수학/: 1011.cpp  1038.cpp  1057.cpp  11051.cpp  11653.cpp  1193.cpp  1292.cpp  1476.cpp  15894.cpp  1676.cpp  1790.cpp  1929.cpp  1978.cpp  2004.cpp  3036.cpp  4796.cpp  4948.cpp  6064.cpp  9613.cpp
untitled/0X17 이분 탐색/: 10815.cpp  10816.cpp  14921.cpp  16401.cpp  1654.cpp  1822.cpp  18869.cpp  18870.cpp  1920.cpp  2110.cpp  2295.cpp  2467.cpp  2473.cpp  2805.cpp  3151.cpp  7453.cpp
untitled/0X18 투포인터/: 1644.cpp  1806.cpp  2003.cpp  2230.cpp
untitled/이퍼 /: 10799.cpp  10971-2.cpp  10971.cpp  11000-1.cpp  11000.cpp  1213-2.cpp  1213.cpp  2580-2.cpp  2580.cpp  2840.cpp  31090정답.cpp  3190-2.cpp  3190.cpp  3n타일링.cpp  compression.cpp  매출 최소화 dp.cpp  매출저앋ㅂ.cpp  매출최소화.cpp
백준/Bronze/1292. 쉽게 푸는 문제/: README.md  쉽게 푸는 문제.cc
백준/Bronze/16172. 나는 친구가 적다 （Large）/: README.md  나는 친구가 적다 （Large）.cc
백준/Bronze/16916. 부분 문자열/: README.md  부분 문자열.cc
백준/Bronze/1978. 소수 찾기/: README.md  소수 찾기.cc
백준/Bronze/2999. 비밀 이메일/: README.md  비밀 이메일.cc
백준/Gold/10026. 적록색약/: README.md  적록색약.cc
백준/Gold/1038. 감소하는 수/: README.md  감소하는 수.cc
백준/Gold/1043. 거짓말/: README.md  거짓말.cc
백준/Gold/1068. 트리/: README.md  트리.cc
백준/Gold/11000. 강의실 배정/: README.md  강의실 배정.cc
백준/Gold/11404. 플로이드/: README.md  플로이드.cc
백준/Gold/11437. LCA/: LCA.cc  README.md
백준/Gold/11559. Puyo Puyo/: Puyo Puyo.cc  README.md
백준/Gold/11729. 하노이 탑 이동 순서/: README.md  하노이 탑 이동 순서.cc
백준/Gold/11779. 최소비용 구하기 2/: README.md  최소비용 구하기 2.cc
백준/Gold/11780. 플로이드 2/: README.md  플로이드 2.cc
백준/Gold/1197. 최소 스패닝 트리/: README.md  최소 스패닝 트리.cc
백준/Gold/1202. 보석 도둑/: README.md  보석 도둑.cc
백준/Gold/1238. 파티/: README.md  파티.cc
백준/Gold/1240. 노드사이의 거리/: README.md  노드사이의 거리.cc
백준/Gold/1261. 알고스팟/: README.md  알고스팟.cc
백준/Gold/12865. 평범한 배낭/: README.md  평범한 배낭.cc
백준/Gold/13144. List of Unique Numbers/: List of Unique Numbers.cc  README.md
백준/Gold/13418. 학교 탐방하기/: README.md  학교 탐방하기.cc
백준/Gold/13460. 구슬 탈출 2/: README.md  구슬 탈출 2.cc
백준/Gold/1351. 무한 수열/: README.md  무한 수열.cc
백준/Gold/13549. 숨바꼭질 3/: README.md  숨바꼭질 3.cc
백준/Gold/1368. 물대기/: README.md  물대기.cc
백준/Gold/13913. 숨바꼭질 4/: README.md  숨바꼭질 4.cc
백준/Gold/14002. 가장 긴 증가하는 부분 수열 4/: README.md  가장 긴 증가하는 부분 수열 4.cc
백준/Gold/14267. 회사 문화 1/: README.md  회사 문화 1.cc
백준/Gold/14442. 벽 부수고 이동하기 2/: README.md  벽 부수고 이동하기 2.cc
백준/Gold/14499. 주사위 굴리기/: README.md  주사위 굴리기.cc
백준/Gold/14500. 테트로미노/: README.md  테트로미노.cc
백준/Gold/14502. 연구소/: README.md  연구소.cc
백준/Gold/14503. 로봇 청소기/: README.md  로봇 청소기.cc
백준/Gold/14921. 용액 합성하기/: README.md  용액 합성하기.cc
백준/Gold/1504. 특정한 최단 경로/: README.md  특정한 최단 경로.cc
백준/Gold/15486. 퇴사 2/: README.md  퇴사 2.cc
백준/Gold/15681. 트리와 쿼리/: README.md  트리와 쿼리.cc
백준/Gold/15683. 감시/: README.md  감시.cc
백준/Gold/1600. 말이 되고픈 원숭이/: README.md  말이 되고픈 원숭이.cc
백준/Gold/16398. 행성 연결/: README.md  행성 연결.cc
백준/Gold/1644. 소수의 연속합/: README.md  소수의 연속합.cc
백준/Gold/1647. 도시 분할 계획/: README.md  도시 분할 계획.cc
백준/Gold/1655. 가운데를 말해요/: README.md  가운데를 말해요.cc
백준/Gold/16933. 벽 부수고 이동하기 3/: README.md  벽 부수고 이동하기 3.cc
백준/Gold/16934. 게임 닉네임/: README.md  게임 닉네임.cc
백준/Gold/16985. Maaaaaaaaaze/: Maaaaaaaaaze.cc  README.md
백준/Gold/16987. 계란으로 계란치기/: README.md  계란으로 계란치기.cc
백준/Gold/1715. 카드 정렬하기/: README.md  카드 정렬하기.cc
백준/Gold/1744. 수 묶기/: README.md  수 묶기.cc
백준/Gold/1753. 최단경로/: README.md  최단경로.cc
백준/Gold/1759. 암호 만들기/: README.md  암호 만들기.cc
백준/Gold/1766. 문제집/: README.md  문제집.cc
백준/Gold/1774. 우주신과의 교감/: README.md  우주신과의 교감.cc
백준/Gold/1781. 컵라면/: README.md  컵라면.cc
백준/Gold/17835. 면접보는 승범이네/: README.md  면접보는 승범이네.cc
백준/Gold/1806. 부분합/: README.md  부분합.cc
백준/Gold/18808. 스티커 붙이기/: README.md  스티커 붙이기.cc
백준/Gold/18809. Gaaaaaaaaaarden/: Gaaaaaaaaaarden.cc  README.md
백준/Gold/1941. 소문난 칠공주/: README.md  소문난 칠공주.cc
백준/Gold/19700. 수업/: README.md  수업.cc
백준/Gold/20166. 문자열 지옥에 빠진 호석/: README.md  문자열 지옥에 빠진 호석.cc
백준/Gold/20183. 골목 대장 호석 － 효율성 2/: README.md  골목 대장 호석 － 효율성 2.cc
백준/Gold/20955. 민서의 응급 수술/: README.md  민서의 응급 수술.cc
백준/Gold/2110. 공유기 설치/: README.md  공유기 설치.cc
백준/Gold/21276. 계보 복원가 호석/: README.md  계보 복원가 호석.cc
백준/Gold/2146. 다리 만들기/: README.md  다리 만들기.cc
(+392 files in other folders)
