cmake_minimum_required(VERSION 3.23)
project(Algorithm_Study)

set(CMAKE_CXX_STANDARD 14)

add_executable(Algorithm_Study
        #basic-algo-lecture/0x03/array_test.cpp
        #basic-algo-lecture/0x04/linked_list_test.cpp
        #"untitled/0X03 배열/10808.cpp"
        #"untitled/0X03 배열/2577.cpp"
        #"untitled/0X03 배열/1475.cpp"
        #"untitled/0X03 배열/3273.cpp"
        untitled/0X04/1406.cpp)
